[package]
name = "analysis-template"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitbuffer = "0.11.0"
getopts = "0.2.21"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.125"
steamid-ng = "1.0.0"
tf-demo-parser = { git = "https://github.com/demostf/parser.git", version = "0.5.1" }

[dependencies.uuid]
version = "1.13.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]